fixed overflow body

--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -25,7 +25,11 @@
   }
 }
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   margin: 0;
 }
